Add documentation to (hopefully) make reviewing easier
No changes were made to code

Bug: T260465
Change-Id: Id8be156aeff150d47aeead8218efc442b5418e66

--- a/modules/templates/allEmptySites.mustache
+++ b/modules/templates/allEmptySites.mustache
@@ -1,5 +1,11 @@
 <div class="globalWatchlist-emptySites mw-collapsed">
 	<div class="globalWatchlist-col">
+		{{!
+			The `empty-sites` parameter is a jQuery object representing an unordered
+			list (ul) of entries, each entry noting that a specific site has no changes.
+			It should NOT be escaped, and so {{{triple brackets}}} are used. See
+			viewManager.refresh in specialglobalwatchlist.js for where this is called from.
+		}}
 		{{{empty-sites}}}
 	</div>
 </div>
