Rename and cleanup modules/ files
- Rename JavaScript files to match classes.
No need for the ext. in file names

- Merge common.css into SpecialGlobalWatchlist.css
None of the rules apply to the settings page anymore

- Remove CSS for hiding the site tag line
Don't appear to be needed, not shown on the special pages

- Add the CSS for styling <hr> elements to the Vue display

- Rename the Vue display classes and ids to match the
naming convention of ext-globalwatchlist-*

- Fix a typo in WikibaseHandler.js

Change-Id: Ia87ee393f1695369155032b4ccfb58378c5354be

--- a/modules/SpecialGlobalWatchlist.display.css
+++ b/modules/SpecialGlobalWatchlist.display.css
@@ -10,6 +10,16 @@
 	font-size: 130%;
 }
 
+.ext-globalwatchlist-content hr {
+	height: 2px;
+	clear: both;
+}
+
+.oo-ui-labelWidget {
+	display: block;
+	padding-bottom: 5px;
+}
+
 #ext-globalwatchlist-watchlistsloading {
 	margin: auto;
 	margin-top: 5px;
