--- a/modules/SpecialGlobalWatchlist.display.css
+++ b/modules/SpecialGlobalWatchlist.display.css
@@ -1,5 +1,11 @@
 /* stylelint-disable selector-max-id */
 
+.ext-globalwatchlist-col {
+	-moz-column-width: 45em;
+	-webkit-column-width: 45em;
+	column-width: 45em;
+}
+
 .ext-globalwatchlist-emptywatchlist {
 	font-size: 130%;
 }
