Add autocomment and history-deleted styles
No longer being loaded by legacy vector, and its
overkill to load all of mediawiki.interface.helpers.styles

Bug: T288733
Change-Id: I9d00a6c6b8c9937594e9c09ff1071b9450110247

--- a/modules/SpecialGlobalWatchlist.display.css
+++ b/modules/SpecialGlobalWatchlist.display.css
@@ -65,3 +65,23 @@ li b {
 	unicode-bidi: isolate;
 	display: inline-block;
 }
+
+/*
+ * Copy some core styles from mediawiki.interface.helpers.styles.less to match the normal watchlist:
+ *
+ * - auto-generated edit summaries
+ * - formatting of message when a username is hidden from an edit
+ *
+ * See T288733
+ */
+.autocomment,
+.autocomment a,
+.autocomment a:visited {
+	color: #72777d;
+}
+
+span.history-deleted {
+	text-decoration: line-through;
+	color: #72777d;
+	font-style: italic;
+}
