docs: Fix code comment to reflect Codex design tokens
At best, this file would be transformed into a Less file and rely
on the mediawiki.skin.variables.less instead.
So skins would have ability to style the interface.
But for the time being, without being among the main authors, just
reflecting recent changes in MediaWiki codebase.

Change-Id: I890f2f3c1901151468fde509d2b05f226367b2c1

--- a/modules/SpecialGlobalWatchlist.display.css
+++ b/modules/SpecialGlobalWatchlist.display.css
@@ -21,7 +21,7 @@
 	height: 13px;
 	position: relative;
 	top: -1px;
-	opacity: 0.51; /* To match @opacity-base--disabled */
+	opacity: 0.51; /* To match @opacity-icon-base--disabled */
 }
 
 .oo-ui-labelWidget {
